@@ -26,7 +26,6 @@ import io.airbyte.config.ConnectionContext;
 import io.airbyte.config.FailureReason.FailureOrigin;
 import io.airbyte.config.FailureReason.FailureType;
 import io.airbyte.config.OperatorWebhook;
-import io.airbyte.config.OperatorWebhookInput;
 import io.airbyte.config.StandardSync;
 import io.airbyte.config.StandardSyncInput;
 import io.airbyte.config.StandardSyncOperation;
@@ -35,6 +34,7 @@ import io.airbyte.config.StandardSyncOutput;
 import io.airbyte.config.StandardSyncSummary;
 import io.airbyte.config.StandardSyncSummary.ReplicationStatus;
 import io.airbyte.config.SyncStats;
+import io.airbyte.config.WebhookOperationSummary;
 import io.airbyte.config.WorkloadPriority;
 import io.airbyte.micronaut.temporal.TemporalProxyHelper;
 import io.airbyte.persistence.job.models.IntegrationLauncherConfig;
@@ -68,8 +68,6 @@ import org.apache.commons.lang3.tuple.ImmutablePair;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.params.ParameterizedTest;
-import org.junit.jupiter.params.provider.ValueSource;
 
 @SuppressWarnings({"PMD.UnusedPrivateField", "PMD.UnusedPrivateMethod"})
 class SyncWorkflowTest {
@@ -84,10 +82,9 @@ class SyncWorkflowTest {
   private Worker syncWorker;
   private WorkflowClient client;
   private ReplicationActivityImpl replicationActivity;
-  private WebhookOperationActivityImpl webhookOperationActivity;
+  private InvokeOperationsActivity invokeOperationsActivity;
   private RefreshSchemaActivityImpl refreshSchemaActivity;
   private ConfigFetchActivityImpl configFetchActivity;
-  private WorkloadFeatureFlagActivity workloadFeatureFlagActivity;
   private ReportRunTimeActivity reportRunTimeActivity;
   private SyncFeatureFlagFetcherActivity syncFeatureFlagFetcherActivity;
   private RouteToSyncTaskQueueActivity routeToSyncTaskQueueActivity;
@@ -149,10 +146,9 @@ class SyncWorkflowTest {
     replicationSuccessOutput = new StandardSyncOutput().withStandardSyncSummary(standardSyncSummary);
     replicationFailOutput = new StandardSyncOutput().withStandardSyncSummary(failedSyncSummary);
     replicationActivity = mock(ReplicationActivityImpl.class);
-    webhookOperationActivity = mock(WebhookOperationActivityImpl.class);
+    invokeOperationsActivity = mock(InvokeOperationsActivityImpl.class);
     refreshSchemaActivity = mock(RefreshSchemaActivityImpl.class);
     configFetchActivity = mock(ConfigFetchActivityImpl.class);
-    workloadFeatureFlagActivity = mock(WorkloadFeatureFlagActivityImpl.class);
     reportRunTimeActivity = mock(ReportRunTimeActivityImpl.class);
     syncFeatureFlagFetcherActivity = mock(SyncFeatureFlagFetcherActivityImpl.class);
     routeToSyncTaskQueueActivity = mock(RouteToSyncTaskQueueActivityImpl.class);
@@ -161,7 +157,6 @@ class SyncWorkflowTest {
     when(refreshSchemaActivity.shouldRefreshSchema(SOURCE_ID)).thenReturn(true);
     when(configFetchActivity.getStatus(sync.getConnectionId())).thenReturn(Optional.of(ConnectionStatus.ACTIVE));
     when(configFetchActivity.getSourceConfig(SOURCE_ID)).thenReturn(Jsons.emptyObject());
-    when(workloadFeatureFlagActivity.useWorkloadApi(any())).thenReturn(false);
     when(routeToSyncTaskQueueActivity.routeToDiscoverCatalog(any())).thenReturn(
         new RouteToSyncTaskQueueActivity.RouteToSyncTaskQueueOutput(TemporalJobType.DISCOVER_SCHEMA.name()));
 
@@ -229,10 +224,9 @@ class SyncWorkflowTest {
   // bundle up all the temporal worker setup / execution into one method.
   private StandardSyncOutput execute(final boolean isReset) {
     syncWorker.registerActivitiesImplementations(replicationActivity,
-        webhookOperationActivity,
+        invokeOperationsActivity,
         refreshSchemaActivity,
         configFetchActivity,
-        workloadFeatureFlagActivity,
         reportRunTimeActivity,
         syncFeatureFlagFetcherActivity,
         routeToSyncTaskQueueActivity);
@@ -261,12 +255,11 @@ class SyncWorkflowTest {
   @Test
   void testSuccessWithChildWorkflow() {
     doReturn(replicationSuccessOutput).when(replicationActivity).replicateV2(any());
-    doReturn(true).when(workloadFeatureFlagActivity).useWorkloadApi(any());
     doReturn(true).when(syncFeatureFlagFetcherActivity).shouldRunAsChildWorkflow(any());
 
     final StandardSyncOutput actualOutput = execute();
 
-    verifyReplication(replicationActivity, syncInput, true, false, REFRESH_SCHEMA_ACTIVITY_OUTPUT);
+    verifyReplication(replicationActivity, syncInput, REFRESH_SCHEMA_ACTIVITY_OUTPUT);
     verifyShouldRefreshSchema(refreshSchemaActivity);
     verify(reportRunTimeActivity).reportRunTime(any());
     assertEquals(
@@ -277,12 +270,11 @@ class SyncWorkflowTest {
   @Test
   void testNoChildWorkflowWithReset() {
     doReturn(replicationSuccessOutput).when(replicationActivity).replicateV2(any());
-    doReturn(true).when(workloadFeatureFlagActivity).useWorkloadApi(any());
     doReturn(true).when(syncFeatureFlagFetcherActivity).shouldRunAsChildWorkflow(any());
 
     final StandardSyncOutput actualOutput = execute(true);
 
-    verifyReplication(replicationActivity, syncInput, true, false, null);
+    verifyReplication(replicationActivity, syncInput, null);
     verifyShouldRefreshSchema(refreshSchemaActivity);
     verify(reportRunTimeActivity).reportRunTime(any());
     assertEquals(
@@ -290,16 +282,14 @@ class SyncWorkflowTest {
         removeRefreshTime(actualOutput.getStandardSyncSummary()));
   }
 
-  @ParameterizedTest
-  @ValueSource(booleans = {true, false})
-  void passesThroughFFCall(final boolean useWorkloadApi) throws Exception {
-    when(workloadFeatureFlagActivity.useWorkloadApi(any())).thenReturn(useWorkloadApi);
+  @Test
+  void passesThroughFFCall() throws Exception {
 
     doReturn(replicationSuccessOutput).when(replicationActivity).replicateV2(any());
 
     final StandardSyncOutput actualOutput = execute();
 
-    verifyReplication(replicationActivity, syncInput, useWorkloadApi, false, null);
+    verifyReplication(replicationActivity, syncInput, null);
     verifyShouldRefreshSchema(refreshSchemaActivity);
     verifyRefreshSchema(refreshSchemaActivity, sync, syncInput);
     assertEquals(
@@ -364,14 +354,12 @@ class SyncWorkflowTest {
             .withExecutionBody(WEBHOOK_BODY)
             .withWebhookConfigId(WEBHOOK_CONFIG_ID));
     final JsonNode workspaceWebhookConfigs = Jsons.emptyObject();
+    final WebhookOperationSummary webhookOperationSummary = new WebhookOperationSummary();
+    webhookOperationSummary.setSuccesses(List.of(WEBHOOK_CONFIG_ID));
     syncInput.withOperationSequence(List.of(webhookOperation)).withWebhookOperationConfigs(workspaceWebhookConfigs);
-    when(webhookOperationActivity.invokeWebhook(
-        new OperatorWebhookInput().withWebhookConfigId(WEBHOOK_CONFIG_ID).withExecutionUrl(WEBHOOK_URL).withExecutionBody(WEBHOOK_BODY)
-            .withWorkspaceWebhookConfigs(workspaceWebhookConfigs)
-            .withConnectionContext(new ConnectionContext().withOrganizationId(ORGANIZATION_ID).withSourceDefinitionId(SOURCE_DEFINITION_ID))))
-                .thenReturn(true);
+    when(invokeOperationsActivity.invokeOperations(any(), any(), any())).thenReturn(webhookOperationSummary);
     final StandardSyncOutput actualOutput = execute();
-    assertEquals(actualOutput.getWebhookOperationSummary().getSuccesses().get(0), WEBHOOK_CONFIG_ID);
+    assertEquals(actualOutput.getWebhookOperationSummary().getSuccesses().getFirst(), WEBHOOK_CONFIG_ID);
   }
 
   @Test
@@ -414,13 +402,11 @@ class SyncWorkflowTest {
   }
 
   private static void verifyReplication(final ReplicationActivity replicationActivity, final StandardSyncInput syncInput) {
-    verifyReplication(replicationActivity, syncInput, false, false, null);
+    verifyReplication(replicationActivity, syncInput, null);
   }
 
   private static void verifyReplication(final ReplicationActivity replicationActivity,
                                         final StandardSyncInput syncInput,
-                                        final boolean useWorkloadApi,
-                                        final boolean useOutputDocStore,
                                         final RefreshSchemaActivityOutput refreshSchemaOutput) {
     verify(replicationActivity).replicateV2(new ReplicationActivityInput(
         syncInput.getSourceId(),
@@ -439,9 +425,7 @@ class SyncWorkflowTest {
         syncInput.getNamespaceFormat(),
         syncInput.getPrefix(),
         refreshSchemaOutput,
-        new ConnectionContext().withOrganizationId(ORGANIZATION_ID).withSourceDefinitionId(SOURCE_DEFINITION_ID),
-        useWorkloadApi,
-        useOutputDocStore));
+        new ConnectionContext().withOrganizationId(ORGANIZATION_ID).withSourceDefinitionId(SOURCE_DEFINITION_ID)));
   }
 
   private static void verifyShouldRefreshSchema(final RefreshSchemaActivity refreshSchemaActivity) {
